--- a/config/jdbc.properties
+++ b/config/jdbc.properties
@@ -1,4 +1,4 @@
 driverClass=com.mysql.jdbc.Driver
-jdbcUrl=jdbc\:mysql\://localhost\:3306/bosBasic
+jdbcUrl=jdbc\:mysql\://localhost\:3306/bosbasic
 user=root
 password=1234
