1、物流系统中流程管理（配送流程管理模块），初步实现； 2、启动配送流程，查看我的组任务；

--- a/.classpath
+++ b/.classpath
@@ -8,6 +8,7 @@
 	</classpathentry>
 	<classpathentry including="**/*.java" kind="src" path="config"/>
 	<classpathentry kind="src" path="test"/>
+	<classpathentry kind="src" path="process"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
